Bug 408359 - Can't copy text from information panel
Summary: Can't copy text from information panel
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: DemonicSavage
URL:
Keywords: junior-jobs, usability
Depends on:
Blocks:
 
Reported: 2019-06-05 21:17 UTC by Pedro Fayolle
Modified: 2019-06-11 12:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pedro Fayolle 2019-06-05 21:17:45 UTC
SUMMARY

Data displayed in the information panel cannot be selected or copied. I often find the need to copy a file size, or the dimensions of an image, or the bitrate of an audio file, etc., but I end up re-typing it by hand or copying it from some other program since I'm unable to copy it straight from Dolphin.

STEPS TO REPRODUCE
1. Select any file(s)/folder(s) in Dolphin
2. Try to select text displayed in information panel

OBSERVED RESULT

Can't select text.

EXPECTED RESULT

Being able to select and copy text.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.58.0
Qt Version: 5.12.3
Comment 1 Kai Uwe Broulik 2019-06-06 07:13:58 UTC
Probably just needs a setTextInteractionFlags(whatever flags it already sets | Qt::TextSelectableByMouse) in the label factory in baloo-widgets. Sounds like an easy patch :)
Comment 2 Nate Graham 2019-06-07 15:40:22 UTC
Indeed. You can see how I did this for the Properties dialog here: https://cgit.kde.org/kio.git/commit/?id=025e5e9957ff92c8196f820e9490f337ebfbe317

You'd do the same here: https://cgit.kde.org/baloo-widgets.git/tree/src/filemetadatawidget.cpp#n121

Would you like to have a go at it, Pedro? I can help if you get stuck. Here's the documentation: https://community.kde.org/Get_Involved/development
Comment 3 DemonicSavage 2019-06-10 16:22:04 UTC
(In reply to Nate Graham from comment #2)
> Indeed. You can see how I did this for the Properties dialog here:
> https://cgit.kde.org/kio.git/commit/
> ?id=025e5e9957ff92c8196f820e9490f337ebfbe317
> 
> You'd do the same here:
> https://cgit.kde.org/baloo-widgets.git/tree/src/filemetadatawidget.cpp#n121
> 
> Would you like to have a go at it, Pedro? I can help if you get stuck.
> Here's the documentation: https://community.kde.org/Get_Involved/development

Considering Pedro didn't respond, may I tackle it?
Comment 4 Nate Graham 2019-06-10 16:31:58 UTC
Please feel free!
Comment 5 DemonicSavage 2019-06-11 02:09:00 UTC
I submitted a fix: https://phabricator.kde.org/D21740
Comment 6 Nate Graham 2019-06-11 12:59:23 UTC
Git commit e5cc92b87ef1c1fc344e89bc7941303692e11a00 by Nate Graham, on behalf of Gabriel Felipe Huwe.
Committed on 11/06/2019 at 12:48.
Pushed by ngraham into branch 'master'.

Make text from Dolphin's information panel copyable

Summary:
Fixed text from Dolphin's information panel not being copyable by adding the correct text interaction flags to the label.
FIXED-IN: 19.08.0

Reviewers: #baloo, #dolphin, ngraham

Reviewed By: #baloo, #dolphin, ngraham

Subscribers: ngraham, #dolphin, #baloo

Tags: #dolphin, #baloo

Differential Revision: https://phabricator.kde.org/D21740

M  +1    -0    src/filemetadatawidget.cpp
M  +1    -0    src/widgetfactory.cpp

https://commits.kde.org/baloo-widgets/e5cc92b87ef1c1fc344e89bc7941303692e11a00