Make text from Dolphin's information panel copyable

Summary:
Fixed text from Dolphin's information panel not being copyable by adding the correct text interaction flags to the label.

BUG: 408359
FIXED-IN: 19.08.0

Reviewers: #baloo, #dolphin, ngraham

Reviewed By: #baloo, #dolphin, ngraham

Subscribers: ngraham, #dolphin, #baloo

Tags: #dolphin, #baloo

Differential Revision: https://phabricator.kde.org/D21740